<resources>
    <string name="app_name">BaristApp</string>
    <string name="txt">The one and only BaristApp!</string>
    <string name="lijst">Lijst van Cocktails</string>
    <string name="eigen">Lijst van Eigen Cocktails</string>
    <string name="maken">Maak een Cocktail</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Cocktails</string>
    <string name="menu_menu">Categories</string>
    <string name="menu_drink_list">Drink List</string>
    <string name="menu_drink_detail">Drink Detail</string>
    <string name="sign_out">Sign out</string>
    <string name="menu_personallist">Personal List</string>
</resources>
