<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.baristapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.baristapp.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.baristapp.ui.slideshow.PersonalListFragment"
        android:label="@string/menu_personallist"
        tools:layout="@layout/fragment_personallist" />

    <fragment
        android:id="@+id/nav_drink_detail"
        android:name="com.example.baristapp.ui.drinkdetail.DrinkDetailFragment"
        android:label="@string/menu_drink_detail"
        tools:layout="@layout/fragment_drink_detail" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.baristapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_drink_list"
        android:name="com.example.baristapp.ui.drinklist.DrinkListFragment"
        android:label="@string/menu_drink_list"
        tools:layout="@layout/fragment_drink_list" />
</navigation>